--- a/README.Rmd
+++ b/README.Rmd
@@ -16,11 +16,16 @@ knitr::opts_chunk$set(
 # HydroSurvSizePred
 
 <!-- badges: start -->
+[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 <!-- badges: end -->
 
-The goal of **HydroSurvSizePred** is to explore spring/summer Chinook salmon, *Oncorhynchus tshawytscha*,  smolt length distributions, predator risk from Northern Pikeminnow and Pacific Hake, and survival across years and seasons during downstream migration through the Federal Columbia River Power System Hydrosystem (FCRPS)
+<!-- lastcommit: start -->
+[![Last Commit](https://img.shields.io/github/last-commit/caitobrien/HydroSurvSizePred)](https://github.com/caitobrien/HydroSurvSizePred/commits/main)
+<!-- lastcommit: end -->
 
-Please note that this Shiny App is dependent on data availability and serves as an exploratory tool.
+The goal of **HydroSurvSizePred** is to explore spring/summer Chinook salmon, *Oncorhynchus tshawytscha*,  smolt length distributions, predator risk from Northern Pikeminnow and Pacific Hake, and survival across years and seasons during downstream migration through the Federal Columbia River Power System Hydrosystem (FCRPS), Pacific Northwest, USA. 
+
+*Please note that this Shiny App is dependent on data availability and serves as an exploratory tool.*
 
 ## Installation
 
@@ -36,13 +41,18 @@ library(HydroSurvSizePred)
 # Run the app
 run_app()
 ```
-*Since project is currently in development, please rerun `install_github("caitobrien/HydroSurvSizePred")` to see latest commits. If no commits since last import, a warning will appear: "Skipping install of 'HydroSurvSizePred' from a github remote, the SHA1 (fdd71350) has not changed since last install. Use `force = TRUE` to force installation"
+**HydroSurvSizePred** is currently in development and changes are continuously being made. If you have already imported to R studio, please rerun `install_github("caitobrien/HydroSurvSizePred")` to see latest changes in the developmental version. If no changes have been made since last import, a warning will appear: `Skipping install of 'HydroSurvSizePred' from a github remote, the SHA1 (fdd71350) has not changed since last install. Use 'force = TRUE' to force installation` and you have the latest developmental version imported.
 
 
-If you are interested in the files that support the development version, please see: (https://github.com/caitobrien/HydroSurvSizePred)[https://github.com/caitobrien/HydroSurvSizePred] for files necessary to run. The app structure follows a Golem framework described in (Engineering Production-Grade Shiny Apps)[https://engineering-shiny.org/setting-up-for-success.html] by Colin Fay, Sébastien Rochette, Vincent Guyader and Cervan Girard.
+If you are interested in the files that support the development version, please see: [https://github.com/caitobrien/HydroSurvSizePred]([https://github.com/caitobrien/HydroSurvSizePred) for files necessary to run. 
+The app structure follows a Golem framework described in [Engineering Production-Grade Shiny Apps](https://engineering-shiny.org/setting-up-for-success.html) by Colin Fay, Sébastien Rochette, Vincent Guyader and Cervan Girard.
 
-```{r update_readme, include=FALSE}
+## Contact
+
+This app is being developed by Caitlin O'Brien, Research Scientist, Columbia Basin Research, SAFS, University of Washington. Please reach out with questions/concerns via csobrien@uw.edu.
+
+```{r update_readme, eval=FALSE, include=FALSE}
 #You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this.
-#devtools::build_readme()
+devtools::build_readme()
 ```
 
