edits to resolve

--- a/README.Rmd
+++ b/README.Rmd
@@ -44,7 +44,9 @@ run_app()
 **HydroSurvSizePred** is currently in development and changes are continuously being made. If you have already imported to R studio, please rerun `install_github("caitobrien/HydroSurvSizePred")` to see latest changes in the developmental version. If no changes have been made since last import, a warning will appear: `Skipping install of 'HydroSurvSizePred' from a github remote, the SHA1 (fdd71350) has not changed since last install. Use 'force = TRUE' to force installation` and you have the latest developmental version imported.
 
 
-If you are interested in the files that support the development version, please see: [https://github.com/caitobrien/HydroSurvSizePred]([https://github.com/caitobrien/HydroSurvSizePred) for files necessary to run. 
+
+If you are interested in the files that support the development version, please see: [https://github.com/caitobrien/HydroSurvSizePred](https://github.com/caitobrien/HydroSurvSizePred) for files necessary to run. 
+
 The app structure follows a Golem framework described in [Engineering Production-Grade Shiny Apps](https://engineering-shiny.org/setting-up-for-success.html) by Colin Fay, Sébastien Rochette, Vincent Guyader and Cervan Girard.
 
 ## Contact
