--- a/README.Rmd
+++ b/README.Rmd
@@ -25,7 +25,7 @@ knitr::opts_chunk$set(
 
 The goal of **HydroSurvSizePred** is to explore spring/summer Chinook salmon, *Oncorhynchus tshawytscha*,  smolt length distributions, predator risk from Northern Pikeminnow and Pacific Hake, and survival across years and seasons during downstream migration through the Federal Columbia River Power System Hydrosystem (FCRPS), Pacific Northwest, USA. 
 
-*Please note that this Shiny App is dependent on data availability and serves as an exploratory tool.*
+*Please note that this Shiny App is currently under development and dependent on data availability. This app serves as an exploratory tool.*
 
 ## Installation
 
