--- a/README.Rmd
+++ b/README.Rmd
@@ -41,7 +41,7 @@ library(HydroSurvSizePred)
 # Run the app
 run_app()
 ```
-**HydroSurvSizePred** is currently in development and changes are continuously being made. If you have already imported to R studio, please rerun `install_github("caitobrien/HydroSurvSizePred")` to see latest changes in the developmental version. If no changes have been made since last import, a warning will appear: `Skipping install of 'HydroSurvSizePred' from a github remote, the SHA1 (fdd71350) has not changed since last install. Use 'force = TRUE' to force installation` and you have the latest developmental version imported.
+**HydroSurvSizePred** is currently in development and changes are continuously being made. If you have already imported to R studio, please rerun `install_github("caitobrien/HydroSurvSizePred")` to see latest changes in the developmental version. If no changes have been made since last import, a warning will appear: `Skipping install of 'HydroSurvSizePred' from a github remote, the SHAX (XXXXXX) has not changed since last install. Use 'force = TRUE' to force installation` and you have the latest developmental version imported. 
 
 
 
