--- a/README.Rmd
+++ b/README.Rmd
@@ -29,7 +29,7 @@ The goal of **HydroSurvSizePred** is to explore spring/summer Chinook salmon, *O
 
 ## Installation
 
-You can install the development version of **HydroSurvSizePred** from [GitHub](https://github.com/) with:
+**Option 1:** You can install the development version of *HydroSurvSizePred* from [GitHub](https://github.com/) with:
 
 ``` r
 # Install the developmental version of the HydroSurvSizePred package from GitHub
@@ -40,12 +40,23 @@ library(HydroSurvSizePred)
 
 # Run the app
 run_app()
+
+#if needed, detach the package workspace and repeat above lines of code
+detach("package:HydroSurvSizePred", unload=TRUE)
 ```
-**HydroSurvSizePred** is currently in development and changes are continuously being made. If you have already imported to R studio, please rerun `install_github("caitobrien/HydroSurvSizePred")` to see latest changes in the developmental version. If no changes have been made since last import, a warning will appear: `Skipping install of 'HydroSurvSizePred' from a github remote, the SHAX (XXXXXX) has not changed since last install. Use 'force = TRUE' to force installation` and you have the latest developmental version imported. 
+*HydroSurvSizePred* is currently in development and changes are continuously being made. If you have already imported to R studio, please rerun `install_github("caitobrien/HydroSurvSizePred")` to see latest changes in the developmental version. If no changes have been made since last import, a warning will appear: `Skipping install of 'HydroSurvSizePred' from a github remote, the SHAX (XXXXXX) has not changed since last install. Use 'force = TRUE' to force installation` and you have the latest developmental version imported. Use `detach()` if not working properly and reinstall. 
+
+This option will run the Shiny App within you RStudio environment but will now download the background files necessary to run. 
+
+**Option 2:** If you are interested in the files that support the development version, please see: [https://github.com/caitobrien/HydroSurvSizePred](https://github.com/caitobrien/HydroSurvSizePred) to clone the repository. Alternatively, within Rstudio, use the following steps: 
+
+1. Start a new project with  `File > New Project > Version Control > Git` 
+
+2. In the repository URL field, paste `https://github.com/caitobrien/HydroSurvSizePred.git`
+
+3. Once project is created, and the repository is cloned, you can run the app within R environment by going to the folder: `dev > run_dev.R` and loading lines of code, with the final `run_app()` to launch the app.
 
 
-
-If you are interested in the files that support the development version, please see: [https://github.com/caitobrien/HydroSurvSizePred](https://github.com/caitobrien/HydroSurvSizePred) for files necessary to run. 
 
 The app structure follows a Golem framework described in [Engineering Production-Grade Shiny Apps](https://engineering-shiny.org/setting-up-for-success.html) by Colin Fay, Sébastien Rochette, Vincent Guyader and Cervan Girard.
 
